--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,10 +48,10 @@ services:
       - /potepanec/log
       - /potepanec/tmp
       - /potepanec/vendor/bundle
-      - vendor_bundle_2_5_1:/potepanec/vendor/bundle
+#      - vendor_bundle_2_5_1:/potepanec/vendor/bundle
       - vendor_assets_2_7:/potepanec/vendor/assets
       - node_modules:/potepanec/node_modules
       - public_spree_2_7:/potepanec/public/spree
     tty: true
     stdin_open: true
-    command: bundle exec rails server -b 0.0.0.0
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
